style e seconda lezione

--- a/index.html
+++ b/index.html
@@ -4,71 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibliocoding - Corso di Informatica per Bambini e Ragazzi</title>
-    <style>
-        body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #4CAF50;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
-}
-
-h1 {
-    margin: 0;
-}
-
-section {
-    padding: 20px;
-    margin-bottom: 20px;
-}
-
-#introduzione, #about {
-    background-color: #f2f2f2;
-}
-
-#indice ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-#indice li {
-    margin-bottom: 10px;
-}
-
-#indice a {
-    text-decoration: none;
-    color: #4CAF50;
-    font-weight: bold;
-}
-
-#indice a:hover {
-    text-decoration: underline;
-}
-
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-}
-
-footer p {
-    margin: 0;
-}
-
-@media (min-width: 768px) {
-    section {
-        margin: 0 auto;
-        max-width: 800px;
-    }
-}
-
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -94,12 +30,22 @@ footer p {
 
     <section id="lezione1">
         <h2>Lezione 1: Informatica e Pensiero Computazionale</h2>
-        <p>Materiali utili:
+        <p>Argomenti:
             <a
                     href="https://docs.google.com/presentation/d/1Lxc7MJwP-X1zgc6PnfyL8kM85Z-to6IUJi28n3yOHzc/edit?usp=sharing" target="_blank">Slide</a>
         </p>
     </section>
 
+    <section id="lezione2">
+        <h2>Lezione 2: Algoritmi e Diagrammi di Flusso</h2>
+        <p>Argomenti:
+            <a
+                    href="https://docs.google.com/presentation/d/1NqDBGFvEjzGDr4qNDajg0DjOwYvUmNH3K1EwXnHf0ro/edit?usp=sharing" target="_blank">Slide</a>
+        </p>
+        <p>Esercizi: <a
+                    href="https://drive.google.com/file/d/11CKnhWQjnlukPOt9fKpn-mu4ETy6aOCn/view?usp=sharing"
+                    target="_blank">Diagramma</a></p>
+    </section>
 
 
     <section id="about">
