file per lezione 3

--- a/index.html
+++ b/index.html
@@ -47,10 +47,23 @@
                     target="_blank">Diagramma</a></p>
     </section>
 
+    <section id="lezione3">
+        <h2>Lezione 3: Introduzione a HTML</h2>
+        <p><b>NOTA: </b> le lezioni del 2 e dell'8 Aprile si terranno in presenza presso la Biblioteca S. Zavatti.</p>
+        <p>Argomenti:
+            <a
+                    href="https://docs.google.com/presentation/d/1afSoTKSWVnbVl03rNeOuRIrDmkKE1I5mUdru8in-VKo/edit?usp=sharing" target="_blank">Slide</a>
+        </p>
+        <p>Materiali:
+            <a href="https://drive.google.com/file/d/1GjwaIPR0-AWqEfiQD0hBxwm6jN5-TSgv/view?usp=sharing" target="_blank">immagine.jpeg</a>
+        </p>
+    </section>
+
 
     <section id="about">
         <h2>About</h2>
-        <p>Cristian Santini e Elisa Saraceni sono gli insegnanti responsabili di Bibliocoding presso la Biblioteca Comunale S. Zavatti di Civitanova Marche.</p>
+        <p>Cristian Santini ed Elisa Saraceni sono gli insegnanti responsabili di Bibliocoding presso la Biblioteca
+            Comunale S. Zavatti di Civitanova Marche.</p>
         <p>Per contatti scrivere email a <a href="bibliocoding@gmail.com">bibliocoding@gmail.com</a></p>
     </section>
 
