materiale per lezione 4

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="introduzione">
         <h2>Introduzione</h2>
-        <p>Benvenuti al corso di informatica per bambinie ragazzi presso la Biblioteca Comunale S. Zavatti di
+        <p>Benvenuti al corso di informatica per ragazzi e raggazze presso la Biblioteca Comunale S. Zavatti di
             Civitanova Marche. Durante questo corso, i partecipanti impareranno concetti fondamentali di
             programmazione attraverso attività divertenti e interattive.</p>
     </section>
@@ -56,6 +56,23 @@
         </p>
         <p>Materiali:
             <a href="https://drive.google.com/file/d/1GjwaIPR0-AWqEfiQD0hBxwm6jN5-TSgv/view?usp=sharing" target="_blank">immagine.jpeg</a>
+        </p>
+    </section>
+
+    <section id="lezione4">
+        <h2>Lezione 4: Esercitazione su HTML</h2>
+        <p><b>NOTA: </b> le lezioni del 2 e dell'8 Aprile si terranno in presenza presso la Biblioteca S. Zavatti.</p>
+        <p>Argomenti:
+            <a
+                    href="https://docs.google.com/presentation/d/1Jm9owqNiVgeyk0xmW7Ouba-TCxkLkkuWILeOcnP7-Uc/edit?usp=sharing" target="_blank">Slide</a>
+        </p>
+        <p>Materiali:
+            <a href="https://drive.google.com/drive/folders/1UeVAPOyosAU0QSVBvjQ5xiq0duee0BCN?usp=sharing"
+               target="_blank">Cartella con immagini pokemon</a>
+        </p>
+        <p>Esempio:
+            <a href="pokemon/i_miei_pokemon.html"
+               target="_blank">i_miei_pokemon.html</a>
         </p>
     </section>
 
