--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="introduzione">
         <h2>Introduzione</h2>
-        <p>Benvenuti al corso di informatica per ragazzi e raggazze presso la Biblioteca Comunale S. Zavatti di
+        <p>Benvenuti al corso di informatica per ragazzi e ragazze presso la Biblioteca Comunale S. Zavatti di
             Civitanova Marche. Durante questo corso, i partecipanti impareranno concetti fondamentali di
             programmazione attraverso attività divertenti e interattive.</p>
     </section>
