add link to pokemon

--- a/pokemon/i_miei_pokemon.html
+++ b/pokemon/i_miei_pokemon.html
@@ -15,26 +15,36 @@
 </head>
 <body>
     <h1>I Pok&eacute;mon</h1>
-    <p>Vi dico qualcosa in pi&ugrave; sui Pok&eacute;mon.</p>
+    <p>Vi dico qualcosa in più sui Pokémon.</p>
 
     <p>Nel cartone animato questi animaletti vengono catturati e allenati da degli umani,
     che poi li usano uno contro l'altro in tornei, per poter vincere delle medaglie.</p>
 
     <hr>
 
-    <p> Ci sono vari tipi di Pok&eacute;mon: d'aria, d'acqua, di terra, magnetici, ... .</p>
+    <p> Ci sono vari tipi di Pokémon: d'aria, d'acqua, di terra, magnetici, ... .</p>
 
-    <p> I Pok&eacute;mon che preferisco sono i seguenti:</p>
+    <p> I Pok&eacute;mon preferiti di Cristian sono i seguenti:</p>
     <p>Charmender
-        <img src="charmender.png" width="100" height="100"></p>
+        <a href="https://wiki.pokemoncentral.it/Charmander" target="_blank">
+        <img src="charmender.png" width="100" height="100"></a>
+    </p>
     <p>Pidgey
-        <img src="pidgey.png" width="100" height="100"></p>
+        <a href="https://wiki.pokemoncentral.it/Pidgey" target="_blank">
+            <img src="pidgey.png" width="100" height="100"></a>
+    </p>
     <p>Ekans
-        <img src="ekans.png" width="100" height="100"></p>
+        <a href="https://wiki.pokemoncentral.it/Ekans" target="_blank">
+        <img src="ekans.png" width="100" height="100"></a>
+    </p>
     <p>Vulpix
-        <img src="vulpix.png" width="100" height="100"></p>
+        <a href="https://wiki.pokemoncentral.it/Vulpix" target="_blank">
+        <img src="vulpix.png" width="100" height="100"></a>
+    </p>
     <p>Jigglypuff
-        <img src="jigglypuff.png" width="100" height="100"></p>
+        <a href="https://wiki.pokemoncentral.it/Jigglypuff" target="_blank">
+        <img src="jigglypuff.png" width="100" height="100"></a>
+    </p>
 
 </body>
 </html>
