bacheca classe I aggiunta

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     </section>
 
     <section id="indice">
-        <h2>Indice delle Lezioni</h2>
+        <h2>Indice dei contenuti</h2>
         <ul>
             <li><a href="#lezione1">Lezione 1</a></li>
             <li><a href="#lezione2">Lezione 2</a></li>
             <li><a href="#lezione3">Lezione 3</a></li>
             <li><a href="#lezione4">Lezione 4</a></li>
+            <li><a href="#bacheca">Bacheca delle Classi</a> <b><em><span style="color:red">[NOVITÀ]</span></em></b></li>
         </ul>
     </section>
 
@@ -49,7 +50,6 @@
 
     <section id="lezione3">
         <h2>Lezione 3: Introduzione a HTML</h2>
-        <p><b>NOTA: </b> le lezioni del 2 e dell'8 Aprile si terranno in presenza presso la Biblioteca S. Zavatti.</p>
         <p>Argomenti:
             <a
                     href="https://docs.google.com/presentation/d/1afSoTKSWVnbVl03rNeOuRIrDmkKE1I5mUdru8in-VKo/edit?usp=sharing" target="_blank">Slide</a>
@@ -61,7 +61,6 @@
 
     <section id="lezione4">
         <h2>Lezione 4: Esercitazione su HTML</h2>
-        <p><b>NOTA: </b> le lezioni del 2 e dell'8 Aprile si terranno in presenza presso la Biblioteca S. Zavatti.</p>
         <p>Argomenti:
             <a
                     href="https://docs.google.com/presentation/d/1Jm9owqNiVgeyk0xmW7Ouba-TCxkLkkuWILeOcnP7-Uc/edit?usp=sharing" target="_blank">Slide</a>
@@ -75,6 +74,17 @@
                target="_blank">i_miei_pokemon.html</a>
         </p>
     </section>
+    <section id="bacheca">
+        <h2>Bacheca delle Classi</h2>
+        <p>In questa sezione sono riportati i lavori finali in HTML di ragazze e ragazzi partecipanti al corso.</p>
+        <p><b>Classe I</b></p>
+        <ul>
+            <li><a href="classe_1/nausicaa/i_miei_pokemon.html" target="_blank">Nausicaa</a></li>
+            <li><a href="classe_1/luca_samuele/i miei pokemon.html" target="_blank">Luca e Samuele</a></li>
+            <li><a href="classe_1/carlo_christian/i_miei_pokemon.html" target="_blank">Carlo e Christian</a></li>
+            <li><a href="classe_1/ares_ludovico/i_miei_pokemon.html" target="_blank">Ares e Ludovico</a></li>
+        </ul>
+</section>
 
 
     <section id="about">
