--- a/classe_1/luca_samuele/i miei pokemon.html
+++ b/classe_1/luca_samuele/i miei pokemon.html
@@ -8,17 +8,17 @@
     <h1>vi dico qualcosa in più sui pokemon</h1>
     <h2>nel cartone animato questi animaletti vengono catturati e allenati da degli umani, che poi li usano uno contro l'altro nei tornei, per poter vincere delle medaglie</h2>
     <h3>ci sono vari tipi di pokemon:d'aria, d'acqua, di terra, magnetici...</h3>
-    <h4>ipokemon preferiti di Samuele e Luca sono i seguenti</h4>
-    <p>Growlithe<p><img src=growlithe.png width="100" height=100><p>
-    <p>Pidgey<p><img src=pidgey.png width="100" height=100><p>
-    <p>Squirtle<p><img src=squirtle.png width="100" height=100>
-    <p>Cleafairy<p><img src=clefairy.png width="100" height=100>
-    <p>Diglett<p><img src=diglett.png width="100" height=100>
-    <p>Gengar<p><img src=gengar.jpg width="100" height=100>
-    <p>Silvally<p><img src=silvally.jpg width="100" height=100>
-    <p>Giratina<p><img src=giratina.jpg width=100 height=100>
-    <p>Mewtwo<p><img src=Mewtwo.jpg width=100 height=100>
-    <p>Vanilluxe<p><img src=Vanilluxe.jpg width=100 height=100>
-    <p>Garchomp<p><img src=Garchomp.jpg width=100 height=100>
+    <h4>i pokemon preferiti di Samuele e Luca sono i seguenti</h4>
+    <p>Growlithe<img src=growlithe.png width="100" height=100></p>
+    <p>Pidgey<img src=pidgey.png width="100" height=100></p>
+    <p>Squirtle<img src=squirtle.png width="100" height=100></p>
+    <p>Cleafairy<img src=clefairy.png width="100" height=100></p>
+    <p>Diglett<img src=diglett.png width="100" height=100></p>
+    <p>Gengar<img src=gengar.jpg width="100" height=100></p>
+    <p>Silvally<img src=silvally.jpg width="100" height=100></p>
+    <p>Giratina<img src=giratina.jpg width=100 height=100></p>
+    <p>Mewtwo<img src=Mewtwo.jpg width=100 height=100></p>
+    <p>Vanilluxe<img src=Vanilluxe.jpg width=100 height=100></p>
+    <p>Garchomp<img src=Garchomp.jpg width=100 height=100></p>
 </body>
 </html>
