--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             <li><a href="classe_1/carlo_christian/i_miei_pokemon.html" target="_blank">Carlo e Christian</a></li>
             <li><a href="classe_1/ares_ludovico/i_miei_pokemon.html" target="_blank">Ares e Ludovico</a></li>
         </ul>
+        <p><b>Classe II</b></p>
+        <ul>
+            <li><a href="classe_2/esercitazione_pokemon_beatrice_stefania/pokemon_belli.html" target="_blank">Beatrice e Stefania</a></li>
+            <li><a href="classe_2/esercitazione_pokemon_diletta/pokemon_belli.html" target="_blank">Diletta</a></li>
+            <li><a href="classe_2/esercitazione_pokemon_liam/pokemon_belli.html" target="_blank">Liam</a></li>
+            <li><a href="classe_2/esercitazione_pokemon_marzio/pokemon_belli.html" target="_blank">Marzio</a></li>
+            <li><a href="classe_2/esercitazione_pokemon_beatrice_stefania/pokemon_brutti.html" target="_blank">Beatrice e Stefania (Pokemon brutti)</a></li>
+            <li><a href="classe_2/esercitazione_pokemon_diletta/pokemon_brutti.html" target="_blank">Diletta (Pokemon brutti)</a></li>
+        </ul>
 </section>
 
 
